test/fixtures/fixtures/type-error/noOverload2.lys.ast.desugar
|-Document(0,83)
  |-FunctionDirective(1,25)
    |-Decorators(1,1)
      <Rule0>
    |-PrivateModifier(1,9)
      <Rule0>
    |-FunDeclaration(9,25)
      |-FunctionName(13,14)
        |-NameIdentifier(13,14)
          |-Identifier=x
      |-TypeParameters(14,14)
        <Rule0>
      |-FunctionParamsList(14,16)
        |-(List)(15,15)
          <Rule0>
      |-ReturnType(16,22)
        |-Reference(18,21)
          |-QName(18,21)
            |-NameIdentifier(18,21)
              |-Identifier=i32
      |-FunctionBody(22,25)
        |-NumberLiteral=1
  |-FunctionDirective(26,56)
    |-Decorators(26,26)
      <Rule0>
    |-PrivateModifier(26,34)
      <Rule0>
    |-FunDeclaration(34,56)
      |-FunctionName(38,39)
        |-NameIdentifier(38,39)
          |-Identifier=x
      |-TypeParameters(39,39)
        <Rule0>
      |-FunctionParamsList(39,47)
        |-(List)(40,46)
          |-Parameter(40,46)
            |-NameIdentifier(40,41)
              |-Identifier=a
            |-Reference(43,46)
              |-QName(43,46)
                |-NameIdentifier(43,46)
                  |-Identifier=ref
      |-ReturnType(47,53)
        |-Reference(49,52)
          |-QName(49,52)
            |-NameIdentifier(49,52)
              |-Identifier=i32
      |-FunctionBody(53,56)
        |-NumberLiteral=1
  |-FunctionDirective(58,82)
    |-Decorators(58,58)
      <Rule0>
    |-FunDeclaration(58,82)
      |-FunctionName(62,66)
        |-NameIdentifier(62,66)
          |-Identifier=test
      |-TypeParameters(66,66)
        <Rule0>
      |-FunctionParamsList(66,68)
        |-(List)(67,67)
          <Rule0>
      |-ReturnType(68,74)
        |-Reference(70,73)
          |-QName(70,73)
            |-NameIdentifier(70,73)
              |-Identifier=i32
      |-FunctionBody(74,82)
        |-AtomicExpression(76,82)
          |-Reference(76,77)
            |-QName(76,77)
              |-NameIdentifier(76,77)
                |-Identifier=x
          |-CallArguments(77,82)
            |-NumberLiteral=1.0
  |-EndOfFile=